libpmount (0.0.14) UNRELEASED; urgency=low

  * Switch the symbols file to use symver tags instead of symbol patterns.
  * Now using Standards-Version 3.9.2 (no changes needed).

 -- Guillem Jover <guillem@debian.org>  Tue, 31 May 2011 09:24:44 +0200

libpmount (0.0.13) unstable; urgency=low

  * Switch to source format “3.0 (native)”.
  * Now using Standards-Version 3.8.4 (no changes needed).
  * Add ${misc:Depends} to all Depends fields.
  * Remove duplicate from source Section field in libpmount0.0 binary stanza.
  * Add Vcs-Browser and Vcs-Git fields.

 -- Guillem Jover <guillem@debian.org>  Tue, 04 May 2010 17:06:11 +0200

libpmount (0.0.12) unstable; urgency=low

  * Workaround debhelper compat v7 bug (#534565) in dh_install which makes
    files end up under /debian/tmp/ in the binary package, by not passing
    --sourcedir to dh_install.
  * Pass -s to arch dependent debhelper commands.
  * Now using Standards-Version 3.8.2 (no changes needed).
  * Remove dependencies from binary-indep target.
  * Remove redundant build dependency from binary-arch target.

 -- Guillem Jover <guillem@debian.org>  Thu, 25 Jun 2009 14:03:34 +0200

libpmount (0.0.11) unstable; urgency=low

  * Switch to debhelper compatibility level 7.
  * Use dh_prep instead of “dh_clean -k”.
  * Now using Standards-Version 3.8.0 (no changes needed).
  * Cleanup debian/copyright:
    - Use UTF-8 copyright symbol.
    - Lower case «Maintained by».
    - Refer to LGPL 2.1 instead of LGPL 2.
    - Refer to LGPL-2.1 from common-licenses instead of just LGPL.
    - Mention “library” instead of “package” in license snippet.
  * Get the default shlibs file dependency by not giving any argument to
    dh_makeshlibs -V option.
  * Add a symbols file for libpmount0.0.

 -- Guillem Jover <guillem@debian.org>  Sun, 22 Feb 2009 04:37:46 +0200

libpmount (0.0.10) unstable; urgency=low

  * Do not strip the shared library in Makefile. (Closes: #437397)