@@ -4,7 +4,7 @@ Section: libs
 Maintainer: Guillem Jover <guillem@debian.org>
 Vcs-Browser: http://git.hadrons.org/?p=libpmount.git
 Vcs-Git: git://git.hadrons.org/git/libpmount.git
-Build-Depends: debhelper (>= 7)
+Build-Depends: dpkg-dev (>= 1.15.7), debhelper (>= 7)
 Standards-Version: 3.9.2
 
 Package: libpmount-dev
